--- a/src/client/components/NoMatch/NoMatch.less
+++ b/src/client/components/NoMatch/NoMatch.less
@@ -46,7 +46,7 @@
   }
 }
 
-@media screen and (min-width:600px) {
+@media screen and (min-width:696px) {
   .main-no-match {
     min-width: 695px;
     margin-top: 5px;
@@ -54,10 +54,12 @@
     border: 1px solid rgba(128, 128, 128, 0.4);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:695px) {
   .main-no-match {
     min-width: 320px;
     margin-top: 2px;
