--- a/src/client/components/Admin/Main/MainAdmin.less
+++ b/src/client/components/Admin/Main/MainAdmin.less
@@ -1,31 +1,26 @@
 @import '../../../style/global-variable.less';
 
 .admin-main {
-  flex: 1 1;
+  flex: 1;
   display: flex;
   flex-direction: column;
-  min-width: 320px;
+  box-shadow: @app-box-shadows;
+  overflow-y: auto;
 
   .admin-content {
-    flex: 1 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    height: 100%;
   }
 
   .work-space {
     height: 100%;
-    width: 100%;
     overflow: auto;
   }
 }
 
-@media screen and (max-width:850px) {
+@media screen and (max-width:695px) {
   .admin-main {
     margin-bottom: 2px;
     margin-top: 2px;
-    width: 100%;
-    min-width: 320px;
     font-size: 14px;
 
     .admin-content {
@@ -37,10 +32,13 @@
   }
 }
 
-@media screen and (min-width:850px) {
+@media screen and (min-width:696px) {
   .admin-main {
     margin-bottom: 5px;
     margin-top: 5px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    min-width: 695px;
 
     .admin-content {
       box-sizing: border-box;
