--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -17,12 +17,9 @@
   }
 
   &__table {
-    display: flex;
-    flex-direction: column;
-    padding-top: 10px;
-    margin: auto;
-    border-top: 2px solid #b5b5b5;
-    border-bottom: 2px solid #b5b5b5;
+    padding: 10px 0 10px;
+    border-top: 2px solid #b5b5b56b;
+    border-bottom: 2px solid #b5b5b56b;
     overflow: auto;
     
 
@@ -36,9 +33,6 @@
   }
 
   &__button-confirm {
-    flex: 0 0 15%;
-    padding-left: 10%; 
-
     button {
       height: 35px;
       width: 90px;
@@ -55,20 +49,18 @@
   }
 }
 
-@media screen and (max-width:850px) {
+@media screen and (max-width:695px) {
   .choose-worker {
-    width: 440px;
-    height: 390px;
+    width: 100%;
+    height: 100%;
 
     &__table {
       flex: 1 0;
-      width: 82%;
       margin-bottom: 20px;
 
       &__worker {
-        width: 94%;
-        height: 42px;
-        margin-left: 10px;
+        height: 45px;
+        margin: 0 20px 0 20px;
         display: flex;
         box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
         border-radius: 5px;
@@ -83,7 +75,7 @@
         }
 
         .worker-info {
-          flex: 1 1 100px;
+          flex: 1 1;
           margin-left: 15px;
           display: flex;
           flex-direction: column;
@@ -92,30 +84,31 @@
           &__name {
             margin-top: 3px;
             height: 20px;
-            width: 70%;
           }
 
           &__city {
             height: 15px;
             font-size: 13px;
-            width: 70%;
-            font-size: 13px;
           }
 
           &__rating {
             height: 60px;
-            padding-top: 10px;
+            padding: 10px 20px 0 0;
             text-align: right;
-            padding-right: 20px;
+
           }
         }
       }
     }
 
+    &__button-confirm {
+      flex: 0 0 60px;
+      padding-left: 40px; 
+    }
+
     &__header {
       margin-top: 20px;
-      width: 100%;
-      height: 10%;
+      height: 40px;
       text-align: center;
       font-size: 20px;
     }
@@ -132,20 +125,18 @@
   }
 }
 
-@media screen and (min-width:850px) {
+@media screen and (min-width:696px) {
   .choose-worker {
-    width: 85%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
 
     &__table {
       flex: 1;
-      width: 92%;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
 
       &__worker {
-        width: 94%;
         height: 60px;
-        margin-left: 10px;
+        margin: 0 30px 0 30px;
         display: flex;
         box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
         border-radius: 5px;
@@ -169,17 +160,13 @@
           &__name {
             height: 20px;
             padding-top: 10px;
-            width: 70%;
           }
 
           &__city {
-            height: 25px;
-            width: 70%;
             font-size: 13px;
           }
 
           &__rating {
-            height: 60px;
             padding-top: 10px;
             text-align: right;
             padding-right: 20px;
@@ -189,10 +176,15 @@
     }
 
     &__header {
-      width: 100%;
-      height: 10%;
+      height: 60px;
+      margin-top: 30px;
       text-align: center;
       font-size: 20px;
+    }
+
+    &__button-confirm {
+      flex: 0 0 80px;
+      padding-left: 50px; 
     }
 
     .buttonHome {
