--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -12,14 +12,13 @@ body {
 
 .app {
     height: 100vh;
-    width: 100vw;
-    position: relative;
+    overflow: hidden;
+    overflow-x: auto;
 }
 
 .app-main {
     display: flex;
     flex-direction: column;
-    width: 80vw;
     height: 100%;
 }
 
@@ -37,7 +36,6 @@ body {
 }
 
 .footer {
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,12 +52,38 @@ body {
     }
 }
 
-@media screen and (min-width:850px) {
+::-webkit-scrollbar{
+    border-color: @tables-color;
+    width: 12px;
+    height: 12px;
+    background-color: rgba(0, 4, 41, 0.05);
+}
+::-webkit-scrollbar-thumb{
+    border-width:1px 1px 1px 2px;
+    border-color: rgba(0, 4, 41, 0.40);
+    background-color:  #e4ded8;
+}
+::-webkit-scrollbar-thumb:hover{
+    border-width: 1px 1px 1px 2px;
+    border-color: rgba(0, 4, 41, 0.40);
+    background-color: rgba(0, 4, 41, 0.10);
+}
+::-webkit-scrollbar-track{
+    background-color: @tables-color;
+    border-width:0;
+}
+::-webkit-scrollbar-track:hover{
+    background-color: @tables-color;
+}
+
+@media screen and (min-width:696px) {
     body {
         background: content-box @app-background-color no-repeat;
     }
 
     .app-main {
+        width: 80%;
+        min-width: 695px;
         margin: auto;
     }
 
@@ -102,30 +126,10 @@ body {
         }
     }
 
-    ::-webkit-scrollbar{
-        border-color: rgba(0, 4, 41, 0.29);
-        width: 14px;
-        background-color: rgba(0, 4, 41, 0.05);
-    }
-    ::-webkit-scrollbar-thumb{
-        border-width:1px 1px 1px 2px;
-        border-color: rgba(0, 4, 41, 0.40);
-        background-color: rgba(0, 4, 41, 0.09);
-    }
-    ::-webkit-scrollbar-thumb:hover{
-        border-width: 1px 1px 1px 2px;
-        border-color: rgba(0, 4, 41, 0.40);
-        background-color: rgba(0, 4, 41, 0.10);
-    }
-    ::-webkit-scrollbar-track{
-        border-width:0;
-    }
-    ::-webkit-scrollbar-track:hover{
-        background-color: rgba(0, 4, 41, 0.05);
-    }
+    
 }
 
-@media screen and (max-width:850px) {
+@media screen and (max-width:695px) {
     body {
         background: @mobile-app-background-color;
         font-size: 13px;
@@ -160,28 +164,5 @@ body {
             padding-right: 20px;
             font-size: 11px;
         }
-    }
-
-    ::-webkit-scrollbar{
-        border-color: @tables-color;
-        width: 12px;
-        background-color: rgba(0, 4, 41, 0.05);
-    }
-    ::-webkit-scrollbar-thumb{
-        border-width:1px 1px 1px 2px;
-        border-color: rgba(0, 4, 41, 0.40);
-        background-color:  #e4ded8;
-    }
-    ::-webkit-scrollbar-thumb:hover{
-        border-width: 1px 1px 1px 2px;
-        border-color: rgba(0, 4, 41, 0.40);
-        background-color: rgba(0, 4, 41, 0.10);
-    }
-    ::-webkit-scrollbar-track{
-        background-color: @tables-color;
-        border-width:0;
-    }
-    ::-webkit-scrollbar-track:hover{
-        background-color: @tables-color;
     }
 }
