--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -46,7 +46,7 @@
     border-radius: 5px;
     border-top-left-radius: 10px;
     box-shadow: @app-box-shadows;
-    
+    overflow-y: auto;
 
     &__title {
       padding-top: 30px;
