--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -105,6 +105,7 @@ body {
             background-size: 450px 300px;
             align-items: center;
             margin-left: 5px;
+            overflow-y: auto;
         }
     }
 
