refactor styles for drop mtnu delete

--- a/src/client/style/model-tables.less
+++ b/src/client/style/model-tables.less
@@ -52,19 +52,7 @@
 
       td {
         &:last-child {
-          .button-refactor-models {
-            width: 50%;
-            height: 28px;
-            border: none;
-            font-size: 13px;
-            color: black;
-            cursor: pointer;
-            outline: none;
-            background-color: inherit;
-            border-left: 1px solid rgba(105, 105, 105, 0.65);
-          }
-        
-          a > button {
+          button {
             width: 50%;
             height: 28px;
             border: none;
