--- a/src/client/components/App/LoginForm/LoginForm.less
+++ b/src/client/components/App/LoginForm/LoginForm.less
@@ -1,9 +1,6 @@
 .login-form {
-  position: relative;
-  top: 20vh;
   margin: auto;
   width: 320px;
-  height: 320px;
   background-color: #f4f4ea;
   border: 2px solid #b5b5b5;
   border-radius: 20px;
@@ -67,6 +64,7 @@
 
     & > button {
       margin-top: 25px;
+      margin-bottom: 35px;
       height: 35px;
       width: 110px;
       padding: 0;
@@ -90,6 +88,7 @@
 
 .modal-window {
   position: absolute;
+  display: flex;
   top: 0;
   height: 100vh;
   width: 100vw;
