rebase style for drop-menu

--- a/src/client/style/model-tables.less
+++ b/src/client/style/model-tables.less
@@ -61,12 +61,11 @@
             cursor: pointer;
             outline: none;
             background-color: inherit;
-            margin: auto;
           }
 
-          .button-delete-model {
+          .button-delete-model, .button-close-delete {
+            margin: auto;
             color: green;
-            border-right: 1px solid grey;
           }
 
           .button-close-delete {
