make some style better

--- a/src/client/components/ComponentMaterial/DropMenuDelete/DropMenuDelete.less
+++ b/src/client/components/ComponentMaterial/DropMenuDelete/DropMenuDelete.less
@@ -2,7 +2,8 @@
     position: relative;
     font-size: 14px;
     font-weight: bold;
-    width: 49px;
+    box-sizing: border-box;
+    width: 50%;
     display: inline-block;
     border-left: 1px solid gray;
 
