--- a/src/client/style/global-variable.less
+++ b/src/client/style/global-variable.less
@@ -10,3 +10,5 @@
 @app-border-style: 1px solid rgba(128, 128, 128, 0.4);
 
 @app-box-shadows: 0 0 10px rgba(0, 0, 0, 0.5);
+
+@order-dashboard-color: rgba(0, 0, 0, 0.788);
