add numeric order

--- a/src/client/components/Admin/Dashboard/Dashboard.less
+++ b/src/client/components/Admin/Dashboard/Dashboard.less
@@ -56,7 +56,6 @@
         }
 
         &__row {
-
             &:first-child {
                 height: 10px;
             }
@@ -155,7 +154,7 @@
                     &__title {
                         font-size: 17px;
                         text-align: center;
-                        color: blue;
+                        color: rgb(0, 0, 122);
                     }
                 }
             }
