--- a/src/client/components/ComponentMaterial/TooltipOrder/TooltipOrder.less
+++ b/src/client/components/ComponentMaterial/TooltipOrder/TooltipOrder.less
@@ -2,8 +2,9 @@
 
   &__order {
     font-size: 11px;
-    padding: 2px 0;
+    padding: 3px 0;
     border-bottom: 1px solid gray;
+    cursor: pointer;
   
     svg {
         font-size: 16px;
